--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -7,7 +7,19 @@
     justify-content: center;
     border: 1px solid black;
     margin: 0 7.5px 15px;
+    overflow: hidden;
+    &:hover {
+      cursor: pointer;
+      & .background-image{
+        transform: scale(1.05);
+        transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95)
+      }
+      & .content{
+        opacity: 0.9;
+      }
+    }
   
+
     &:first-child {
       margin-right: 7.5px;
     }
@@ -15,7 +27,15 @@
     &:last-child {
       margin-left: 7.5px;
     }
-  
+    .background-image{
+      width: 100%;
+      height: 100%;
+      background-position: center;
+      background-size: cover;
+    }
+    &.large{
+      height: 400px;
+    }
     .content {
       height: 90px;
       padding: 0 25px;
@@ -24,7 +44,9 @@
       align-items: center;
       justify-content: center;
       border: 1px solid black;
-  
+      background-color: white;
+      opacity: 0.7;
+      position: absolute;
       .title {
         font-weight: bold;
         margin-bottom: 6px;
