--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
 body {
-  font-family: 'Open Sans Condessed', Helvetica;
+  font-family: 'Open Sans Condensed', Helvetica;
+  padding: 20px 60px;
 }
