--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,10 @@ body {
   font-family: 'Open Sans Condensed', Helvetica;
   padding: 20px 60px;
 }
+a{
+  text-decoration: none;
+  color: black;
+}
+* {
+  box-sizing: border-box;
+}
