--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -10,7 +10,8 @@
   top: 90px;
   right: 40px;
   z-index: 5;
-
+  display: flex;
+  justify-content: center;
   .cart-items {
     height: 240px;
     display: flex;
@@ -20,5 +21,14 @@
 
   button {
     margin-top: auto;
+  }
+  &.inverted{
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+    &:hover{
+      background-color: black;
+      color: white;
+    }
   }
 }
