--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -16,9 +16,9 @@
     height: 240px;
     display: flex;
     flex-direction: column;
-    overflow: scroll;
+    overflow: auto;
   }
-
+ 
   button {
     margin-top: auto;
   }
@@ -31,4 +31,8 @@
       color: white;
     }
   }
+}
+.empty-message{
+  font-size: 20px;
+  margin: 50px;
 }
