Shop reducer, shop page, selectors.

--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -13,6 +13,7 @@
   font-weight: bolder;
   border: none;
   cursor: pointer;
+  justify-content: center;
 
   &:hover {
     background-color: white;
